[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "kohilites"
description = "A lightweight command line tool to extract and save highlights and notes made on KOReader."
version = "0.0.1"
license = { file = "LICENSE" }
authors = [
    {name = "George Richardson", email = "georgerichardson@posteo.net"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Mdutils >= 1.3.1",
    "SLPP >= 1.2.3",
]

[project.urls]
Home = "https://github.com/georgerichardson/kohilites"

[project.optional-dependencies]
test = [
    "pytest == 7.2.0"
]
dev = [
    "setuptools ~=63.2.0",
    "wheel ~= 0.37.1",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"

[tool.coverage.run]
source = ["kohilites"]

[project.scripts]
kohilites = "kohilites.cli:get_highlights"